tests/invalid/str_unknown_method_call/main.py
def run_case() -> None:
    s: str = "abc"
    s.nope()


if __name__ == "__main__":
    run_case()
